# create-project

./: .gitignore  Cargo.toml  README.md  cmd.sh
langs/: cpp.sh
src/: args.rs  build.rs  create_man_file  dependencies.rs  git.rs  langs.rs  lib.rs  main.rs  man_hellolang
src/langs/: angular.rs  c.rs  clojure.rs  cpp.rs  csharp.rs  dart.rs  django.rs  dotnet.rs  elixir.rs  express.rs  fastapi.rs  flask.rs  go.rs  groovy.rs  haskell.rs  java.rs  js.rs  julia.rs  kotlin.rs  maven.rs  mod.rs  nextjs.rs  ocaml.rs  perl.rs  php.rs  python.rs  reactjs.rs  reactts.rs  ruby.rs  rust.rs  scala.rs  svelte.rs  swift.rs  ts.rs  typescript.rs  vue.rs  zig.rs
src/langs/gitignores/: linux_angular_typescript_javascript.txt  linux_c++.txt  linux_c.txt  linux_clojure.txt  linux_dart.txt  linux_django_python.txt  linux_dotnetcore.txt  linux_elixir.txt  linux_express_javascript_typescript.txt  linux_fastapi_python.txt  linux_flask_python.txt  linux_go.txt  linux_groovy.txt  linux_haskell.txt  linux_java.txt  linux_javascript.txt  linux_julia.txt  linux_kotlin.txt  linux_maven_java.txt  linux_nextjs_javascript_typescript.txt  linux_ocaml.txt  linux_perl.txt  linux_php_laravel.txt  linux_python.txt  linux_react_javascript_typescript.txt  linux_ruby_rails.txt  linux_rust.txt  linux_scala.txt  linux_svelte.txt  linux_swift.txt  linux_typescript.txt  linux_vue_javascript_typescript.txt  linux_zig.txt  macos_angular_typescript_javascript.txt  macos_c++.txt  macos_c.txt  macos_clojure.txt  macos_dart.txt  macos_django_python.txt  macos_dotnetcore.txt  (+59 more)
